--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,12 @@ services:
     restart: always
 
   reklama-tests:
-    image: reklama-app
+    image: reklama-tests
     container_name: reklama-tests
     build:
       context: .
-    command: ["dotnet", "test", "./Reklama.Tests.Reklama.Tests.csproj", "-c", "Release", "--no-build"]
+      dockerfile: Dockerfile.tests
+    command: ["dotnet", "test", "./Reklama.Tests/Reklama.Tests.csproj", "-c", "Release", "--no-build"]
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
     volumes:
